
Thu Mar 18 18:57:31 CET 1999

	- Synced preproc.y with gram.y.
	- Added '%' operator.

Thu Mar 18 19:44:10 CET 1999

	- Added ECPGstatus() function.
	- Cleaned up some error messages.

Fri Mar 19 08:49:32 CET 1999

	- Synced preproc.y with gram.y.
	- Synced keywords.c.
	- Synced pgc.l with scan.l.

Sat Mar 20 19:57:42 CET 1999

	- Synced preproc.y with gram.y.
	- Fixed handling of ';' character.

Sun Mar 21 13:05:50 CET 1999

	- Synced preproc.y with gram.y.

Mon Mar 22 19:22:38 CET 1999

	- Fixed incorrect password entry in parser.
	- Made no_auto_trans available for each connection seperately.

Sat Apr 10 20:10:50 CEST 1999

	- Allow ecpg handle a floating point constants.
	- Fix ecpg runtime library memory leak (patch by Masaaki Sakaida).

Mon Apr 12 17:56:14 CEST 1999

	- Fixed ECPG variable handling.
	- Make no_auto_trans be accessible via SET command.
	- Do not eat comments so line numbering should be correct.
	
Wed Apr 14 17:59:06 CEST 1999

	- Added simple calculations for array bounds.

Fri Apr 16 18:25:18 CEST 1999

	- Fixed small bug in ECPGfinish().

Sat Apr 24 12:39:07 CEST 1999

	- Synced preproc.y with gram.y.
	- Allow more than one blank between EXEC and SQL.
	- Allow statements to be prepared from a character string, too.

Fri May  7 07:11:38 CEST 1999

	- Synced preproc.y with gram.y.
	- Fixed small bug in parser.

Thu May 13 13:51:26 CEST 1999

	- Synced preproc.y with gram.y.

Mon May 17 18:13:30 CEST 1999

	- Synced preproc.y with gram.y.

Fri May 21 18:13:44 CEST 1999

	- Synced preproc.y with gram.y.

Sun May 23 11:19:32 CEST 1999

	- Add braces around each statement so that a simple if/else works.

Thu Jun 10 21:09:12 CEST 1999

	- Fixed typo in preproc.y.
	- Synced pgc.l with scan.l.

Wed Jun 16 20:21:42 CEST 1999

	- Fixed another typo in preproc.y.

Thu Jun 24 18:06:43 CEST 1999

	- Fixed C comment bug that caused ecpg to not accept quoted quotes.
	- Set library version to 3.0.0
	- Set ecpg version to 2.6.0